<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SampleApp</string>
    <string name="add">Dodaj</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="imie">Imie</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="data_urodzenia">Data urodzenia</string>
    <string name="email">Adres e-mail</string>
    <string name="telefon">Numer telefonu</string>
    <string name="zapisz">Zapisz</string>

</resources>
